# blog_django

./: .env.sample  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  keep_alive.yml
django_blog/: .coverage  config  pyproject.toml
django_blog/accounts/: admin.py  models.py  urls.py  views.py
django_blog/accounts/migrations/: 0001_initial.py  0002_userprofile.py  0003_userprofile_short_bio.py  0004_alter_userprofile_short_bio.py
django_blog/accounts/templates/accounts/: profile.html
django_blog/accounts/tests/: test_models.py  test_views.py
django_blog/blog/: admin.py  forms.py  models.py  urls.py  views.py
django_blog/blog/migrations/: 0001_initial.py  0002_alter_post_content.py
django_blog/blog/templates/blog/: beautifull_f1.html  post_confirm_delete.html  post_create_success.html  post_detail.html  post_form.html  post_list.html
django_blog/blog/tests/: test_models.py  test_post_create_success_view.py  test_post_create_view.py  test_post_delete_view.py  test_post_detail_view.py  test_post_list_view.py  test_post_update_view.py
django_blog/django_blog/: settings.py  urls.py  wsgi.py
django_blog/openaichat/: apps.py  responses.json  urls.py  views.py
django_blog/openaichat/templates/openaichat/: chatbot.html
django_blog/openaichat/tests/: test_chatbot_views.py
django_blog/portfolio/: .coverage  admin.py  forms.py  models.py  urls.py  views.py
django_blog/portfolio/management/commands/: create_superuser.py
django_blog/portfolio/migrations/: 0001_initial.py  0002_alter_project_image.py  0003_alter_project_description.py  0004_project_resume.py  0005_alter_project_description.py
django_blog/portfolio/templates/portfolio/: about.html  project_confirm_delete.html  project_detail.html  project_form.html  project_list.html
django_blog/portfolio/tests/: test_forms.py  test_models.py
django_blog/portfolio/tests/views/: conftest.py  test_about_view.py  test_create_view.py  test_delete_view.py  test_detail_view.py  test_list_view.py  test_update_view.py
django_blog/static/css/: blog.css
django_blog/static/d3_dataviz/: f1_2025_flourish_enriched.csv  index.html  script.js  style.css
django_blog/staticfiles/css/: blog.css
django_blog/templates/: base.html
