[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "*/migrations/*",
    "manage.py",
    "*/__init__.py"
]
max-line-length = 88
ignore = ["E203","W503"]
statistics = true


[tool.coverage.run]
branch = true
source = ["/app/django_blog/portfolio", "/app/django_blog/accounts"]
omit = ["*/migrations/*", "*/__init__.py", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/tests/*",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
testpaths = ["accounts/tests", "portfolio/tests/*"]
addopts = ["--cov", "--cov-report=term-missing"]
