[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.coverage.run]
branch = true
source = ["portfolio", "accounts"]
omit = ["*/migrations/*", "*/__init__.py", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/tests/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_blog.settings"
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
testpaths = ["accounts/tests", "portfolio/tests/*"]
addopts = ["--cov", "--cov-report=term-missing"]


