[tool.ruff]
line-length = 100
exclude = [
    "**/migrations/*",
    "venv",
    "django_blog/django_blog/*",
    "doc/",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: erreurs pycodestyle, F: erreurs pyflakes, I: import sorting
ignore = ["E501"] # optionnel : ignorer "line too long" (tu peux l'enlever)

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    
    venv|
    migrations|
    __pycache__|
    django_blog/django_blog|
    doc
)/
'''



[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.coverage.run]
branch = true
source = ["portfolio", "accounts", "blog"]
omit = ["*/migrations/*", "*/__init__.py", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/tests/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_blog.settings"
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
testpaths = ["accounts/tests/*", "portfolio/tests/*", "openaichat/tests/*", "blog/tests/*"]
addopts = ["--cov", "--cov-report=term-missing"]


